[package]
name = "loopdev-fyra"
description = "Setup and control loop devices"
version = "0.5.0"
authors = ["Michael Daffin <michael@daffin.io>"]
license = "MIT"
documentation = "https://docs.rs/loopdev"
repository = "https://github.com/FyraLabs/loopdev"
readme = "README.md"
keywords = ["loop", "losetup"]
edition = "2021"

# library name is still loopdev
[lib]
name = "loopdev"


[badges]
build = { status = "https://github.com/FyraLabs/loopdev/actions/workflows/ci.yml/badge.svg" }

[features]
direct_io = []

[dependencies]
errno = "0.3.5"
libc = "0.2.105"

[build-dependencies]
bindgen = { version = "0.68", default-features = false, features = ["runtime"] }

[dev-dependencies]
glob = "0.3.0"
gpt = "3.1"
lazy_static = "1.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1"
tempfile = "3.8"
